--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="xy.js"></script>
 		<script type="text/javascript" src="entity.js"></script>
 		<script type="text/javascript" src="being.js"></script>
+		<script type="text/javascript" src="wall.js"></script>
 		<script type="text/javascript" src="player.js"></script>
 		<script type="text/javascript" src="level.js"></script>
 		<script type="text/javascript" src="textbuffer.js"></script>
