including hsl fix

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		
+		<title>GrumpyRL</title>
+		<link rel="icon" 
+		      type="image/jpg" 
+		      href="http://media-cache-ec0.pinimg.com/45x45/86/10/90/86109017f3ffe03faa164290117d4dff.jpg">		
 
 		<script type="text/javascript" src="rot.js"></script>
 		<script type="text/javascript" src="xy.js"></script>
