--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 		<script type="text/javascript" src="textbuffer.js"></script>
 		<script type="text/javascript" src="hud.js"></script>
 		<script type="text/javascript" src="scrolldisplay.js"></script>
+		<script type="text/javascript" src="dwarf.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 		<script>Game.init();</script>
         
