--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="hud.js"></script>
 		<script type="text/javascript" src="scrolldisplay.js"></script>
 		<script type="text/javascript" src="dwarf.js"></script>
+		<script type="text/javascript" src="goblin.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 		<script>Game.init();</script>
         
@@ -49,6 +50,7 @@
         <div id="grumpy"></div>
         <div id="HUD">
             <span id="gold">Gold: 0</span>
+            <span id="dwarves">Gold: 0</span>
         </div>
 		<!--img style="float:right;  width: 400px" src="../img/Grumpy2.png"/-->
 
