--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 		<script type="text/javascript" src="scrolldisplay.js"></script>
 		<script type="text/javascript" src="dwarf.js"></script>
 		<script type="text/javascript" src="goblin.js"></script>
+		<script type="text/javascript" src="corpse.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 		<script>Game.init();</script>
         
